src/styles/components/inputs/Select.module.scss
.inputContainer {
    display: flex;
    flex-direction: column;
    gap: 10px;
    position: relative;
    flex: 1 1 auto;
    .label {
        //styleName: Text;
        font-family: Noto Sans;
        font-size: 16px;
        font-weight: 400;
        line-height: 22px;
        letter-spacing: 0em;
        text-align: left;

        color: #898b94;
    }
    &.text {
        .label {
            display: none;
        }
        .input {
            background-color: transparent;
            border: none;
            .selectedItem {
                padding: 0;
                gap: 7px;
                color: #7f3ffc;
            }
        }
    }
    .input {
        display: flex;
        flex-direction: column;
        min-height: 55px;
        width: 100%;
        font-family: Manrope;
        font-size: 16px;
        font-weight: 400;
        line-height: 22px;
        letter-spacing: 0em;
        text-align: left;
        text-align: left;
        color: #292b2f;
        border-radius: 5px;

        border-radius: 8px;
        background-color: #ffffff;
        border: 1px solid #989a9e;
        .selectedItem {
            padding: 16px 16px 16px 22px;
            color: #201522;
            font-family: Noto Sans;
            font-size: 16px;
            font-style: normal;
            font-weight: 400;
            line-height: normal;
            display: flex;
            > span {
                flex: 1 0 auto;
            }
            cursor: pointer;
        }
        .itemWrapper {
            position: absolute;
            display: flex;
            flex-direction: column;
            top: 100%;
            right: 0;
            height: 0;
            overflow: auto;
            gap: 4px;
            border-radius: 8px;
            background: #fff;
            min-width: 200px;
            transition: all 0.4s ease-out;
            overflow-x: hidden;
            &::-webkit-scrollbar{
                display: none;
            }
            &.open {
                border: 1px solid #cfd1d5;
                box-shadow: 0px 1px 15px 0px rgba(113, 105, 114, 0.09);
                height: 212px;
            }
            .selectItem {
                min-height: 30px;
                width: 100%;
                cursor: pointer;
                display: flex;
                align-items: center;
                justify-content: flex-start;
                white-space: nowrap;
                padding: 20px;
                &:hover {
                    background-color: #7f3ffc33;
                }
            }
        }
    }
}

